raw/RAFA ZARIN NAFISA 6411 245150200111050/2024-11-14-08-37-13.ceg/compilation.txt
NT.java:14: error: <identifier> expected
        System.out.printf("%.2f%n", hasilAkhir);
                         ^
NT.java:14: error: illegal start of type
        System.out.printf("%.2f%n", hasilAkhir);
                          ^
2 errors
Not compiled
